2008-06-23  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.8
	  ----------------------

2008-06-23  Michal Ludvig  <michal@logix.cz>

	* S3/PkgInfo.py: Bumped up version to 0.9.8
	* NEWS: Added 0.9.8
	* TODO: Removed completed tasks

2008-06-23  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Last-minute compatibility fixes for Python 2.4
	* s3cmd, s3cmd.1: --debug-exclude is an alias for --debug-syncmatch
	* s3cmd: Don't require $HOME env variable to be set.
	  Fixes #2000133
	* s3cmd: Wrapped all execution in a try/except block
	  to catch all exceptions and ask for a report.

2008-06-18  Michal Ludvig  <michal@logix.cz>

	* S3/PkgInfo.py: Version 0.9.8-rc3

2008-06-18  Michal Ludvig  <michal@logix.cz>

	* S3/S3.py: Bucket name can't contain upper-case letters (S3/DNS limitation).

2008-06-12  Michal Ludvig  <michal@logix.cz>

	* S3/PkgInfo.py: Version 0.9.8-rc2

2008-06-12  Michal Ludvig  <michal@logix.cz>

	* s3cmd, s3cmd.1: Added GLOB (shell-style wildcard) exclude, renamed
	  orig regexp-style --exclude to --rexclude

2008-06-11  Michal Ludvig  <michal@logix.cz>

	* S3/PkgInfo.py: Version 0.9.8-rc1

2008-06-11  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Remove python 2.5 specific code (try/except/finally 
	  block) and make s3cmd compatible with python 2.4 again.
	* s3cmd, S3/Config.py, s3cmd.1: Added --exclude-from and --debug-syncmatch
	  switches for sync.

2008-06-10  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Added --exclude switch for sync.
	* s3cmd.1, NEWS: Document --exclude

2008-06-05  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.7
	  ----------------------

2008-06-05  Michal Ludvig  <michal@logix.cz>

	* S3/PkgInfo.py: Bumped up version to 0.9.7
	* NEWS: Added 0.9.7
	* TODO: Removed completed tasks
	* s3cmd, s3cmd.1: Updated help texts, 
	  removed --dry-run option as it's not implemented.
	
2008-06-05  Michal Ludvig  <michal@logix.cz>

	* S3/Config.py: Store more file attributes in sync to S3.